Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/dbResults.html
+++ b/web/dbResults.html
@@ -98,7 +98,7 @@
 				<TR>
 					<TD colspan=3 align="center" height=50>
 						<input type="button" CLASS="button" value="Mapping" onClick="databaseFunc(this.form, 'transciptMapping');">
-						<input type="button" CLASS="button" value="Download" onClick="databaseFunc(this.form, 'genAllDbResult', 'Generating Excel file, please wait.');">
+						<input type="button" CLASS="button" value="Download" onClick="databaseFunc(this.form, 'genAllDbResult', 'Generating file, please wait.');">
 						<input type="button" CLASS="button" value="Set To Default" onClick="setDefault(this.form);">
 					</TD>
 				</TR>
