Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/mouseCross.html
+++ b/web/mouseCross.html
@@ -122,7 +122,13 @@ BXD:
 The BXD family of recombinant inbred (<A HREF="http://www.complextrait.org/archive/2001/HTML/silverbook/frame1.1.shtml" target="_blank" class="fs14">RI</A>) strains were derived by crossing C57BL/6J (B6) and DBA/2J (D2) and inbreeding progeny for 20 or more generations. This genetic reference panel is a remarkable resource because data for thousands of phenotypes and nearly 100 gene, protein, and metabolite expression data sets have been acquired over a nearly a 40-year period. Another advantage of the BXD family is that the both parents have been sequenced (C57BL/6J as part of a public effort, and DBA/2J by Celera Genomics, by the UTHSC group and by Sanger). Based on our analysis of the sequence data, these two strains differ at approximately 4.8 million SNPs. Variants (mostly single nucleotide polymorphisms and about 500,000 insertion-deletions) that produce interesting phenotypes can be located efficiently. The zoomable physical maps in GeneNetwork can display the positions of B versus D-type SNPs at high resolution.
 </P>
 
-Our DBA/2J sequence data (from Wang et al. 2016) have been used to generate a virtual genome for this strain using a C57BL/6J framework. In other words, all SNPs and small DBA/2J indels have inserted in place of original C57BL/6J sequence. This DBA/2J genome is available at <a href="http://spring211.uthsc.edu/user/mm10_snp/mm10_ucsc_D2snp.fa">here</a>.
+Our DBA/2J sequence data (from Wang et al. 2016) have been used to generate a virtual genome for this strain using a C57BL/6J framework. In other words, all SNPs and small DBA/2J indels have inserted in place of original C57BL/6J sequence. 
+
+<P>This DBA/2J genome is available at <a href="http://spring211.uthsc.edu/user/mm10_snp/mm10_ucsc_D2snp.fa">here</a>.
+
+<P>Complete variant files for the DBA/2J versus reference genome are here (also on an mm10 assembly): ftp://gnftp:gnftp@tyche.uthsc.edu/DBA2J/
+
+
 
 </BLOCKQUOTE>
 
