Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/mouseCross.html
+++ b/web/mouseCross.html
@@ -124,14 +124,11 @@ The BXD family of recombinant inbred (<A HREF="http://www.complextrait.org/archi
 
 Our DBA/2J sequence data (from Wang et al. 2016) have been used to generate a virtual genome for this strain using a C57BL/6J framework. In other words, all SNPs and small DBA/2J indels have inserted in place of original C57BL/6J sequence. 
 
-<P>This DBA/2J genome is available at <a href="http://spring211.uthsc.edu/user/mm10_snp/mm10_ucsc_D2snp.fa">here</a>.
+<P>This DBA/2J genome is available at <a target="_blank" href="http://spring211.uthsc.edu/user/mm10_snp/mm10_ucsc_D2snp.fa">here</a>.
 
-<P>Complete variant files for the DBA/2J versus reference genome are here (also on an mm10 assembly): ftp://gnftp:gnftp@tyche.uthsc.edu/DBA2J/
-
-
+<P>Complete variant files for the DBA/2J versus reference genome are here (also on an mm10 assembly): <a target="_blank" href="ftp://gnftp:gnftp@tyche.uthsc.edu/DBA2J/">ftp://gnftp:gnftp@tyche.uthsc.edu/DBA2J/</a>
 
 </BLOCKQUOTE>
-
 
 <P>
 <DIR>
@@ -139,7 +136,6 @@ Our DBA/2J sequence data (from Wang et al. 2016) have been used to generate a vi
 </DIR>
 <DIR><P><SMALL><B>Legend:</B> Photo gallery of BXD strains</SMALL></P>
 </DIR>
-
 
 <BLOCKQUOTE>
 
