menu, etc. maintenance

--- a/web/reference.html
+++ b/web/reference.html
@@ -60,17 +60,29 @@
 
 <BR>
 <BR>
- <A HREF="https://scholar.google.com/scholar?as_q=&as_epq=&as_oq=webqtl+%22genenetwork.org%22&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C5"target="_blank" class="fwn">Google Scholar</A> search for  <I> "genenetwork" OR "webqtl"  </I> (1430 hits as of September 8, 2016).
+ <A HREF="https://scholar.google.com/scholar?as_q=&as_epq=&as_oq=webqtl+%22genenetwork.org%22&as_eq=&as_occt=any&as_sauthors=&as_publication=&as_ylo=&as_yhi=&btnG=&hl=en&as_sdt=0%2C5"target="_blank" class="fwn">Google Scholar</A> search for  <I> "genenetwork" OR "webqtl"  </I> (1430 hits as of September 8, 2016, 1630 as of May 17, 2017).
 </B>
 
 
 <OL>
 
+<LI> Mulligan MK, Mozhui K, Prins P, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/27933521" target="_blank" class="fwn">2017</A>) GeneNetwork: A Toolbox for Systems Genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology 1488:75-120
+[An updated primer in using GeneNetwork for molecular analysis of mouse and human cohorts.] 
+<SMALL><A HREF="/images/upload/Mulligan_How_To_Use_GeneNetwork_2017_v1.pdf" target="_blank" class="fwn">PDF version</A>
+</SMALL>
+<BR>
+<BR>
+
+<LI> Williams RW, Williams EG (<A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2017</A>) Resources for Systems Genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology 1488:3-29.
+[This review is intended to help you when making the hard choices about types of resources to use in system genetic studies. The short answer: embrace diversity in your resources. The computational barriers to joint analysis are now minimal.] 
+<SMALL><A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn">PDF version</A>
+</SMALL>
+<BR>
+<BR>
+
 <LI>
 Pinelli M, Carissimo A, Cutillo L, Lai CH, Mutarelli M, Moretti MN, Singh MV, Karali M, Carrella D, Pizzo M, Russo F, Ferrari S, Ponzin D, Angelini C, Banfi S, di Bernardo D  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/27235414" target="_blank" class="fwn">2016</A>) An atlas of gene expression and gene co-regulation in the human retina.Nucleic Acids Res. 2016 Jul 8;44(12):5773-84
 <SMALL><A HREF="http://retina.tigem.it" target="_blank" class="fwn">RETINA database</A>, and see the <A HREF="/images/upload/Pinelli_diBerardo_2016_AtlasHumanRetina.pdf" target="_blank" class="fwn">PDF</A>. These data are now in GeneNetwork (Species = Human, Group = Retina).
-
-
 </SMALL>
 
 <BR>
@@ -80,10 +92,7 @@ Pinelli M, Carissimo A, Cutillo L, Lai CH, Mutarelli M, Moretti MN, Singh MV, Ka
 <LI>
 Williams EG, Wu Y, Pooja J, Dubuis S, Blattmann P, Argmann CA, Houten SM, Amariuta T, Wolski W, Zamboni N, Aebersold R, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/27284200" target="_blank" class="fwn">2016</A>) Systems proteomics and trans-omic integration illuminate new mechanisms in mitochondrial function. Science 352(6291):aad0189
 <SMALL><A HREF="http://science.sciencemag.org/content/352/6291/aad0189.full" target="_blank" class="fwn">HTML version</A>, <A HREF="/images/upload/WilliamsEG_Auwerx_Systems_Science-2016.pdf " target="_blank" class="fwn">PDF</A>
-
-
 </SMALL>
-
 <BR>
 <BR>
 
@@ -98,20 +107,6 @@ Sloan Z, Arends D, Broman KW, Centeno A, Furlotte N, Nijveen H, Yan L, Zhou X, W
 
 <LI>Alam G, Miller DB, O'Callaghan JP, Lu L, Williams RW, Jones BC  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/27182044" target="_blank" class="fwn">2016</A>) MPTP neurotoxicity is highly concordant between the sexes among BXD recombinant inbred mouse strains. Neurotoxicology in press
 <SMALL><A HREF="/images/upload/Alam_Jones_MPTP_Neurotox_2016.pdf" target="_blank" class="fwn">PDF version</A>
-</SMALL>
-<BR>
-<BR>
-
-<LI> Williams RW, Williams EG (<A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Resources for Systems Genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology in press
-[This review is intended to help you when making the hard choices about types of resources to use in system genetic studies. The short answer: embrace diversity in your resources. The computational barriers to joint analysis are now minimal.] 
-<SMALL><A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn">PDF version</A>
-</SMALL>
-<BR>
-<BR>
-
-<LI> Williams RW, Williams EG (<A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn"" target="_blank" class="fwn">2016</A>) Resources for Systems Genetics. In <I>Systems Genetics</I>, Methods in Molecular Biology in press
-[This review is intended to help you when making the hard choices about types of resources to use in system genetic studies. The short answer: embrace diversity in your resources. The computational barriers to joint analysis are now minimal.] 
-<SMALL><A HREF="/images/upload/Williams_ResourcesSystemsGenetics_MethodsMolBio_2016.pdf" target="_blank" class="fwn">PDF version</A>
 </SMALL>
 <BR>
 <BR>
