update GN docs by RW

--- a/web/faq.html
+++ b/web/faq.html
@@ -110,9 +110,9 @@
 
 <B>A1: </B>Software errors that generate on-screen error messages are automatically logged and reviewed by us, usually on a daily basis. If you note an error on the public site (rather than the less stable beta site) that is persistent (more than one day) or that is really causing you trouble, please send us an email notification immediately and we wil do our best to resolve the problem. Email us at: 
 <BR>
-webqtl@gmail.com, rwilliams@uthsc.edu
+rwilliams at uthsc dot edu, lyan6 at uthsc dot edu, zachary.a.sloan at gmail dot com, acenteno at uthsc dot edu
  
-<SMALL>[RWW, September 27, 2005]</SMALL>
+<SMALL>[RWW, November 17, 2017]</SMALL>
 <BR>  
 		<BR>  
 		<a href="#index" class= "fs12">Back to Index</a>
