update html info

--- a/web/mouseCross.html
+++ b/web/mouseCross.html
@@ -281,9 +281,11 @@ The BXH set of recombinant inbred strains (<A HREF="http://www.complextrait.org/
 
 </Blockquote>
 
-
+&nbsp;&nbsp;&nbsp;&nbsp;<A NAME="CFW" class="subtitle">CFW:</a>
+<Blockquote>
+Carworth Farms White (CFW) mice are a commercially available outbred mouse population that exhibit rapid LD decay in comparison to other available mouse populations. We performed a genome-wide association study (GWAS) of behavioral, physiological and gene expression phenotypes using 1,200 male CFW mice. We used genotyping by sequencing (GBS) to obtain genotypes at 92,734 SNPs. We also measured gene expression using RNA sequencing in three brain regions. Our study identified numerous behavioral, physiological and expression quantitative trait loci (QTLs). We integrated the behavioral QTL and eQTL results to implicate specific genes, including Azi2 in sensitivity to methamphetamine and Zmynd11 in anxiety-like behavior. The combination of CFW mice, GBS and RNA sequencing constitutes a powerful approach to GWAS in mice.
+</Blockquote>
 &nbsp;&nbsp;&nbsp;&nbsp;<A NAME="CXB" class="subtitle">
-
 CXB:</A> 
 <Blockquote>
 The CXB set is the first, oldest, and smallest group of mouse recombinant inbred (<A HREF="http://www.complextrait.org/archive/2001/HTML/silverbook/frame1.1.shtml" target="_blank" class="fs14">RI</A>) strains with the first publication by Donald Bailey in 1971 (Recombinant-inbred strains. An aid to finding identity, linkage, and function of histocompatibility and other genes. <A HREF="/images/upload/Bailey_1971_Transplantation.pdf" target="_blank" class="fs14">Transplantation 11:325-328</A>). By 1975 the first set of 8 CXB strains were all beyond generation F30. The maternal strain is BALB/cBy and the paternal strain is C57BL/6By. Donald Bailey, the inventor of recombinant inbred strains, created the initial eight BXH recombinant inbred strains at The Jackson Laboratory in the mid 1960s. They were then called CXB-A through CXB-H. They have been used extensively by immunologists and neurogeneticists. A total of 13 of these strains are now available. </P>
