--- a/web/mysql_heart_beat.html
+++ b/web/mysql_heart_beat.html
@@ -1,8 +1,8 @@
 <?php
 
-	$servername	= "lily";
-	$username	= "webqtlout";
-	$password	= "webqtlout";
+	$servername	= "localhost";
+	$username	= "webqtl";
+	$password	= "webqtl";
 	$database	= "db_webqtl";
 
 	$conn = new mysqli($servername, $username, $password, $database);
