update faq and menus

--- a/web/faq.html
+++ b/web/faq.html
@@ -191,9 +191,11 @@ Manly KF, Wang J, Williams RW (<A HREF="http://genomebiology.com/2005/6/3/R27" c
 		</Blockquote>
 
 <Blockquote>
-<B>Q4: </B> <A NAME="Q-4" class="Normal">How should we cite the GeneNetwork and WebQTL, and what are the conditions on use of data? </A><BR><BR>
+<B>Q4: </B> <A NAME="Q-4" class="Normal">How should we cite the GeneNetwork  and what are the conditions on use of data? </A><BR><BR>
 
-<B>A4: </B>Please have a look at the <A HREF="http://www.genenetwork.org/reference.html" class="normal" target="_blank">References</A> page or at the <A HREF="conditionsofUse.html" class="normal" target="_blank">Usage Conditions</A> page. If you have other questions about a particular data set, please link to the <A HREF="statusandContact.html" class="normal" target="_blank">Contacts</A> page or Info button for the individual data sets. <SMALL>[RWW, Dec 14, 2004, Feb 23, 2005]</SMALL>
+<B>A4: </B>Please cite GeneNetwork in text using this format recommended by the <A HREF="https://neuinfo.org" class="normal" target="_blank">Neuroscience Information Framework</A>: <B>GeneNetwork (date accessed), RRID:SCR_002388</B>  
+
+<P>Please also have a look at the <A HREF="http://www.genenetwork.org/reference.html" class="normal" target="_blank">References</A> page or at the <A HREF="conditionsofUse.html" class="normal" target="_blank">Usage Conditions</A> page. If you have other questions about a particular data set, please link to the <A HREF="statusandContact.html" class="normal" target="_blank">Contacts</A> page or Info button for the individual data sets. <SMALL>[RWW, Dec 14, 2004; Feb 23, 2005; Jan23, 2018 ]</SMALL>
 <BR><BR>  
 		<a href="#index" class= "fs12">Back to Index</a>
 		<BR>
