update html files and maintainance scripts

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -32,6 +32,19 @@
 <!--FB like currently off. Uncomment if needed on.
 <div class="fb-like" data-href="http://www.genenetwork.org/whats_new.html" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
 -->
+
+
+<Blockquote>
+<STRONG>2017-12-01: GeneNetwork 1 will be supported in 2018 but GeneNetwork 2 will become the main production server </STRONG>
+
+<P>
+<a href="http://gn2.genenetwork.org" target="_blank">GeneNetwork 2</a> is ready for testing and research projects. GeneNetwork 1 (GN1) and GeneNetwork 2 (GN2) share the a single database, but they use different code and algorithms for mapping and data analysis. There are some benefits of using GN2, including more powerful linear mixed model mapping methods that account for kinship structure. 
+
+<P>The interface of GN2 is still a work in progress. Please send any suggestion, requests, or bug reports to rwilliams@uthsc.edu.
+</Blockquote>
+
+
+
 <Blockquote>
 <STRONG>2016-10-03: Notes on new BXD names</STRONG>.
 <OL>
