Removed and fixed some links in the GN1 home page and footer

--- a/web/footer.html
+++ b/web/footer.html
@@ -44,13 +44,8 @@ and the Addictome (P30 DA044223, 2017-2022)
 
 <LI><a class="smallsize" target="_blank" href="http://www.drugabuse.gov">NIDA</A>, <a class="smallsize" target="_blank" href="http://www.nimh.nih.gov/">NIMH</A>, and <a class="smallsize" target="_blank" href="http://www.niaaa.nih.gov/">NIAAA</A> (P20-DA 21131, 2001-2012)
 
-<LI>NCI <a class="smallsize" target="_blank" href="http://emice.nci.nih.gov/">MMHCC</A> (U01CA105417), NCRR, <a class="smallsize" target="_blank" href="http://www.birncommunity.org">BIRN</A>, (U24 RR021760)
+<LI>NCI MMHCC (U01CA105417), NCRR, <a class="smallsize" target="_blank" href="http://www.birncommunity.org">BIRN</A>, (U24 RR021760)
 		</UL>
-	</TD>
-</TR>
-<TR>
-	<TD colspan=4 id="smallsize" align="left">
-		&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://atlas.uthsc.edu/mailman/listinfo/genenetwork">Join GeneNetwork Mailing List</a>
 	</TD>
 </TR>
 <TR>
