Remove old file and galaxy URL

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -716,7 +716,7 @@ Read full article: <a href="dbdoc/GN304_Iancu_Hitzemann.pdf" target="_blank">Gen
 <BLOCKQUOTE>
 <STRONG>2010-12-10:</STRONG>
 We built a new <a href="http://richard.uthsc.edu/" target="_blank">Cluster</a> system. Four nodes were deployed. Every node is Dell PowerEdge R815, has 48 cores, 64G RAM, 1.3G RAM/core. CPU is AMD 1.86G Hz. The headmaster connects one Dell PowerVault MD1000 (15*2TB hard drives, RAID5).
-And <a href="http://richard.uthsc.edu:8080/" target="_blank">Galaxy</a> system was installed on the Cluster system.
+And Galaxy system was installed on the Cluster system.
 (Implemented by Lei Yan).
 </BLOCKQUOTE>
 
