Fixing GN1 to run with PHP5

--- a/web/infoshare/manager/auth.html
+++ b/web/infoshare/manager/auth.html
@@ -1,5 +1,6 @@
 <?php
 	//Start session
+	include_once('../includes/fix_mysql.inc.php');
 	session_start();
 	
 	//Check whether the session variable SESS_MEMBER_ID is present or not
