--- a/web/infoshare/ckeditor/samples/index.html
+++ b/web/infoshare/ckeditor/samples/index.html
@@ -9,7 +9,7 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 	<title>CKEditor Sample</title>
 	<script src="../ckeditor.js"></script>
 	<script src="js/sample.js"></script>
-	<link rel="stylesheet" href="css/samples.css">
+	<link rel="stylesheet" href="../css/samples.css">
 	<link rel="stylesheet" href="toolbarconfigurator/lib/codemirror/neo.css">
 </head>
 <body id="main">
